Menu entry translations.

--- a/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
+++ b/components/com_jspace/admin/language/en-GB/en-GB.com_jspace.sys.ini
@@ -19,5 +19,9 @@ COM_JSPACE_HARVESTS="Harvests"
 
 COM_JSPACE_CLI_DESCRIPTION="Command line tools for managing JSpace information."
 
-COM_JSPACE_OAI_LAYOUT_TITLE="OAI item"
-COM_JSPACE_OAI_LAYOUT_DESC=""
+COM_JSPACE_OAI_VIEW_DEFAULT_TITLE="OAI How-to"
+COM_JSPACE_OAI_VIEW_DEFAULT_DESC="Introductory information about the JSpace OAI provider."
+COM_JSPACE_OAI_VIEW_DEFAULT_OPTION="Default"
+COM_JSPACE_OAI_VIEW_XML_TITLE="OAI XML"
+COM_JSPACE_OAI_VIEW_XML_DESC="The OAI end points. Create an OAI XML menu item to adhere to the OAI url specification."
+COM_JSPACE_OAI_VIEW_XML_OPTION="XML"
